ended stamps section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,182 @@
 		</div>
 	</div>
 
+	<!--************ Section-About ************-->
 
+	<section class="about">
+		<div class="wrapper about-wrap">
+			<h2 class="section-title about-title">Почему мы?</h2>
+
+			<div class="about-items">
+
+				<div class="about-item">
+					<img src="img/about/about1.png" alt="icon">
+					<h4 class="about-item__title">Срочное изготовление</h3>
+					<p class="about-item__descr">Изготовление печатей и штампов от 30 минут в центре Минска. пр-т Машерова д.17 здание "Белой Вежи"</p>
+				</div>
+				<div class="about-item">
+					<img src="img/about/about2.png" alt="icon">
+					<h4 class="about-item__title">Уникальное предложение</h3>
+					<p class="about-item__descr">При заказе реквизитного штампа факсимиле в подарок</p>
+				</div>
+				<div class="about-item">
+					<img src="img/about/about3.png" alt="icon">
+					<h4 class="about-item__title">Уникальность</h3>
+					<p class="about-item__descr">Единственный Член Международной Ассоциации Производителей Печатей и Штампов на территории РБ</p>
+				</div>
+				<div class="about-item">
+					<img src="img/about/about4.png" alt="icon">
+					<h4 class="about-item__title">Партнерская программа</h3>
+					<p class="about-item__descr">Большой опыт работы как с коммерческими, так и с бюджетными организациями. Бонусная система.</p>
+				</div>
+				<div class="about-item">
+					<img src="img/about/about5.png" alt="icon">
+					<h4 class="about-item__title">Огромный ассортимент</h3>
+					<p class="about-item__descr">Полный спектр всех видов штемпельной продукции, штемпельных красок, а также полиграфии</p>
+				</div>
+				<div class="about-item">
+					<img src="img/about/about6.png" alt="icon">
+					<h4 class="about-item__title">Сервисный центр</h3>
+					<p class="about-item__descr">Выезд специалиста для заправки и замены подушек, восстановления и замены старых печатей</p>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+	<!--******** Section-Сatalog ********-->
+
+	<section class="catalog">
+		<div class="wrapper catalog-wrap">
+			<h2 class="section-title catalog-title">Каталог продукции</h2>
+
+			<div class="catalog-items">
+				
+				<div class="catalog-item">
+					<img src="img/catalog/catalog1.png" alt="stamp">
+					<h5 class="catalog-item__title">Макеты печатей</h5>
+				</div>
+				<div class="catalog-item">
+					<img src="img/catalog/catalog2.png" alt="stamp">
+					<h5 class="catalog-item__title">Макеты штампов</h5>
+				</div>
+				<div class="catalog-item">
+					<img src="img/catalog/catalog3.png" alt="stamp">
+					<h5 class="catalog-item__title">Датеры, нумераторы</h5>
+				</div>
+				<div class="catalog-item">
+					<img src="img/catalog/catalog4.png" alt="stamp">
+					<h5 class="catalog-item__title">Оснастки</h5>
+				</div>
+				<div class="catalog-item">
+					<img src="img/catalog/catalog5.png" alt="stamp">
+					<h5 class="catalog-item__title">Сопутствующие товары</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!--********* Section-Round-Stamp *********-->
+
+	<section class="round-stamp">
+		<div class="wrapper stamp-wrap">
+			<h2 class="section-title stamp-title">Круглая печать</h2>
+			
+			<div class="stamp-items">
+				
+				<div class="stamp-item">
+					<h5 class="stamp-item__title">Для ИП</h5>
+					<span class="stamp-item__descr">Для изготовления круглой печати прикрепите следующие документы</span>
+					<ul>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile1" style="cursor:pointer" alt="file" />
+							<input type="file" class="file1"  name="file1" style="display:none" />
+							<p class="download-file upfile1" style="cursor:pointer">Паспорт</p>
+						</li>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile2" style="cursor:pointer" alt="file" />
+							<input type="file" class="file2"  name="file1" style="display:none" />
+							<p class="download-file upfile2" style="cursor:pointer">Родовой герб</p>
+						</li>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile3" style="cursor:pointer" alt="file" />
+							<input type="file" class="file3"  name="file1" style="display:none" />
+							<p class="download-file upfile3" style="cursor:pointer">Свидетельство о регистрации</p>
+						</li>
+					</ul>
+					<p class="label-descr">Введите Ваши данные</p>
+					<label class="data-label">		             
+		                <input type="text" class="data-input" name="name" placeholder="ФИО" />
+		            </label>
+		            <label class="data-label">
+		                <input type="text" class="data-input" name="phone" placeholder="+ 375 29 123 45 67" />
+		            </label>
+		            <a href="#" class="button button__stamp">заказать</a>
+				</div>
+
+				<div class="stamp-item">
+					<h5 class="stamp-item__title">Для Юр.лиц</h5>
+					<span class="stamp-item__descr">Для изготовления круглой печати прикрепите следующие документы</span>
+					<ul>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile4" style="cursor:pointer" alt="file" />
+							<input type="file" class="file4"  name="file1" style="display:none" />
+							<p class="download-file upfile4" style="cursor:pointer">Паспорт</p>
+						</li>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile5" style="cursor:pointer" alt="file" />
+							<input type="file" class="file5"  name="file1" style="display:none" />
+							<p class="download-file upfile5" style="cursor:pointer">Родовой герб</p>
+						</li>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile6" style="cursor:pointer" alt="file" />
+							<input type="file" class="file6"  name="file1" style="display:none" />
+							<p class="download-file upfile6" style="cursor:pointer">Свидетельство о регистрации</p>
+						</li>
+					</ul>
+					<p class="label-descr">Введите Ваши данные</p>
+					<label class="data-label">		             
+		                <input type="text" class="data-input" name="name" placeholder="ФИО" />
+		            </label>
+		            <label class="data-label">
+		                <input type="text" class="data-input" name="phone" placeholder="+ 375 29 123 45 67" />
+		            </label>
+		            <a href="#" class="button button__stamp">заказать</a>
+				</div>
+
+				<div class="stamp-item">
+					<h5 class="stamp-item__title">Для врачей</h5>
+					<span class="stamp-item__descr">Для изготовления круглой печати прикрепите следующие документы</span>
+					<ul>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile7" style="cursor:pointer" alt="file" />
+							<input type="file" class="file7"  name="file1" style="display:none" />
+							<p class="download-file upfile7" style="cursor:pointer">Паспорт</p>
+						</li>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile8" style="cursor:pointer" alt="file" />
+							<input type="file" class="file8"  name="file1" style="display:none" />
+							<p class="download-file upfile8" style="cursor:pointer">Родовой герб</p>
+						</li>
+						<li class="stamp-item__list">
+							<img src="img/icon-file.png" class="upfile9" style="cursor:pointer" alt="file" />
+							<input type="file" class="file9"  name="file1" style="display:none" />
+							<p class="download-file upfile9" style="cursor:pointer">Свидетельство о регистрации</p>
+						</li>
+					</ul>
+					<p class="label-descr">Введите Ваши данные</p>
+					<label class="data-label">		             
+		                <input type="text" class="data-input" name="name" placeholder="ФИО" />
+		            </label>
+		            <label class="data-label">
+		                <input type="text" class="data-input" name="phone" placeholder="+ 375 29 123 45 67" />
+		            </label>
+		            <a href="#" class="button button__stamp">заказать</a>
+				</div>
+
+			</div>
+		</div>
+	</section>
 
 
 
