--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="libs/slick/slick-theme.css"/> -->
 	<!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 	<!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
-	<link rel="stylesheet" href="../flexslider.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="libs/flexslider/flexslider.css" type="text/css" media="screen" />
 
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/normalize.css">
@@ -267,7 +267,56 @@
 		</div>
 	</section>
 
+	<!--******* Section-products *******-->
 
+	<section class="products">
+		<div class="wrapper products-wrap">
+			<h2 class="section-title products-title">Также у нас можно изготовить</h2>
+			
+			<div class="flexslider">
+			  	<ul class="slides">
+
+				    <li class="products-item">
+				      	<img class="products-item__img" src="img/products/product1.jpg" alt="stamp" />
+				      	<div class="products-item__descr">
+							<p class="products-item__title">Пломбиратор</p>
+							<p class="products-item__text">Краткое описание данной продукции, её достоинства, особенности производства. Время изготовления данного товара и преимущество заказа у нашей фирмы.</p>
+							<p class="products-item__time">Время производства: 3 дня.</p>
+							<p class="products-item__price">Стоимость: 1500 рублей.</p>
+							<a href="#" class="button button__products">заказать</a>
+						</div>
+				    </li>
+				    <li class="products-item">
+				      	<img class="products-item__img" src="img/products/product1.jpg" alt="stamp" />
+				      	<div class="products-item__descr">
+							<p class="products-item__title">Рельефная печать</p>
+							<p class="products-item__text">Краткое описание данной продукции, её достоинства, особенности производства. Время изготовления данного товара и преимущество заказа у нашей фирмы.</p>
+							<p class="products-item__time">Время производства: 3 дня.</p>
+							<p class="products-item__price">Стоимость: 1500 рублей.</p>
+							<a href="#" class="button button__products">заказать</a>
+						</div>
+				    </li>
+				    <li class="products-item">
+				      	<img class="products-item__img" src="img/products/product1.jpg" alt="stamp" />
+				      	<div class="products-item__descr">
+							<p class="products-item__title">Клише для установки</p>
+							<p class="products-item__text">Краткое описание данной продукции, её достоинства, особенности производства. Время изготовления данного товара и преимущество заказа у нашей фирмы.</p>
+							<p class="products-item__time">Время производства: 3 дня.</p>
+							<p class="products-item__price">Стоимость: 1500 рублей.</p>
+							<a href="#" class="button button__products">заказать</a>
+						</div>
+				    </li>
+
+				    			    
+			  	</ul>
+			</div>
+			<div class="custom-navigation">
+				<a href="#" class="flex-prev">Prev</a>
+				<div class="custom-controls-container"></div>
+				<a href="#" class="flex-next">Next</a>
+			</div>
+		</div>
+	</section>
 
 	
 	<!-- Pop-up-form -->
@@ -301,12 +350,13 @@
 	<![endif]-->
 
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
+	<script src="libs/jquery/jquery.easing.1.3.js"></script>
 	<!-- <script src="libs/animate/jquery.waypoints.js"></script> -->
 	<!-- <script src="libs/animate/animate-css.js"></script> -->
 	<script src="libs/plugins-scroll/plugins-scroll.js"></script>
 	<!-- <script src="libs/slick/slick.min.js"></script> -->
 	<!-- <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script> -->
-	<script defer src="libs//flexslider/jquery.flexslider.js"></script>
+	<script src="libs//flexslider/jquery.flexslider.js"></script>
 
 	<script src="js/common.js"></script>
 	
