--- a/index.html
+++ b/index.html
@@ -37,26 +37,27 @@
 
 	<header class="header">
 		<div class="wrapper header-wrap">
+			<div class="logo-menu-wrap">
+				<div class="logo-header">
+					<img class="logo-header__img" src="img/logo-header.png" alt="logo">
+				</div>
 
-			<div class="logo-header">
-				<img class="logo-header__img" src="img/logo-header.png" alt="logo">
+				<nav class="menu">
+					<a href="#" class="menu__icon">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+					</a>
+					<ul class="menu__links">
+						<li class="menu__links-item"><a href="#">Каталог</a></li>
+						<li class="menu__links-item"><a href="#">Акции</a></li>
+						<li class="menu__links-item"><a href="#">Оплата и доставка</a></li>
+						<li class="menu__links-item contacts"><a href="#">Отзывы</a></li>
+					</ul>
+				</nav>
 			</div>
-
-			<nav class="menu">
-				<a href="#" class="menu__icon">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</a>
-				<ul class="menu__links">
-					<li class="menu__links-item"><a href="#">Каталог</a></li>
-					<li class="menu__links-item"><a href="#">Акции</a></li>
-					<li class="menu__links-item"><a href="#">Оплата и доставка</a></li>
-					<li class="menu__links-item contacts"><a href="#">Отзывы</a></li>
-				</ul>
-			</nav>
-
+			
 			<div class="our-contacts">
 				<a href="tel:375291016633" class="phone"><small>+37529</small>101-66-33</a>
 				<a href="tel:375291016633" class="phone"><small>+37529</small>101-66-33</a>
@@ -140,27 +141,36 @@
 			<h2 class="section-title catalog-title">Каталог продукции</h2>
 
 			<div class="catalog-items">
-				
-				<div class="catalog-item">
-					<img src="img/catalog/catalog1.png" alt="stamp">
-					<h5 class="catalog-item__title">Макеты печатей</h5>
-				</div>
-				<div class="catalog-item">
-					<img src="img/catalog/catalog2.png" alt="stamp">
-					<h5 class="catalog-item__title">Макеты штампов</h5>
-				</div>
-				<div class="catalog-item">
-					<img src="img/catalog/catalog3.png" alt="stamp">
-					<h5 class="catalog-item__title">Датеры, нумераторы</h5>
-				</div>
-				<div class="catalog-item">
-					<img src="img/catalog/catalog4.png" alt="stamp">
-					<h5 class="catalog-item__title">Оснастки</h5>
-				</div>
-				<div class="catalog-item">
-					<img src="img/catalog/catalog5.png" alt="stamp">
-					<h5 class="catalog-item__title">Сопутствующие товары</h5>
-				</div>
+				<a class="block-link" href="#">
+					<div class="catalog-item">					
+						<img src="img/catalog/catalog1.png" alt="stamp">
+						<h5 class="catalog-item__title">Макеты печатей</h5>					
+					</div>
+				</a>
+				<a class="block-link" href="#">
+					<div class="catalog-item">
+						<img src="img/catalog/catalog2.png" alt="stamp">
+						<h5 class="catalog-item__title">Макеты штампов</h5>
+					</div>
+				</a>
+				<a class="block-link" href="#">
+					<div class="catalog-item">
+						<img src="img/catalog/catalog3.png" alt="stamp">
+						<h5 class="catalog-item__title">Датеры, нумераторы</h5>
+					</div>
+				</a>
+				<a class="block-link" href="#">
+					<div class="catalog-item">
+						<img src="img/catalog/catalog4.png" alt="stamp">
+						<h5 class="catalog-item__title">Оснастки</h5>
+					</div>
+				</a>
+				<a class="block-link" href="#">
+					<div class="catalog-item">
+						<img src="img/catalog/catalog5.png" alt="stamp">
+						<h5 class="catalog-item__title">Сопутствующие товары</h5>
+					</div>
+				</a>
 			</div>
 		</div>
 	</section>
@@ -273,6 +283,12 @@
 		<div class="wrapper products-wrap">
 			<h2 class="section-title products-title">Также у нас можно изготовить</h2>
 			
+			<ul class="products-list">
+				<li class="products-name" id="products-name-1">пломбиратор</li>
+				<li class="products-name">рельефная печать</li>
+				<li class="products-name">клише для упаковки</li>
+			</ul>
+
 			<div class="flexslider">
 			  	<ul class="slides">
 
@@ -367,9 +383,8 @@
 			<!-- <ul class="flex-direction-nav"><li class="flex-nav-prev"><a class="flex-prev" href="#">Previous</a></li><li class="flex-nav-next"><a class="flex-next" href="#">Next</a></li></ul> -->
 			<a href="#" class="button button__review">Оставить свой отзыв</a>
 		</div>
-	</section>
 
-	<!--************ Section-clients ************-->
+		<!--************ Section-clients ************-->
 
 	<section class="clients">
 		<div class="wrapper clients-wrap">
@@ -413,6 +428,9 @@
 		</div>
 
 	</section>
+	</section>
+
+	
 
 	
 	<!--************* Section-contacts *************-->
@@ -421,14 +439,13 @@
 
 		<div class="map-wrap" id="map">
 			<div id="Ymap"></div>
-		</div>
-		<div class="map-descr-main">
+			<div class="map-descr-main">
 			
 			<div class="map-item">
 				<img class="map-icon" src="img/contacts/phone.png" alt="icon">
-				<a class="phone" href="tel:+80172876448">
-						<p>8(017)287-64-48</p>
-				</a>
+				<p><a class="map-phone" href="tel:+80172876448">8(017)287-64-48
+						</a></p>
+				
 			</div>			
 			<div class="map-item">
 				<img class="map-icon" src="img/contacts/mail.png" alt="icon">
@@ -464,9 +481,12 @@
 			</div>
 			
 		</div><!-- /map-descr-main -->
-		<div class="footer-copy">
-			<p class="p-footer">Разработка сайта: <a href="https://target-kc.ru/" target="_blank">Таргет Консалт Компани</a></p>
+			<div class="footer-copy">
+				<p class="p-footer">Разработка сайта: <a href="https://target-kc.ru/" target="_blank">Таргет Консалт Компани</a></p>
+			</div>
 		</div>
+		
+		
 	</section>
 
 
