--- a/oplata.html
+++ b/oplata.html
@@ -8,7 +8,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Каталог</title>
+	<title>Оплата и доставка</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
@@ -62,121 +62,75 @@
 			<a href="#" class="button button__header">Бесплатный звонок</a>
 		</div>
 	</header>
-	
-	<!--********** Section-catalog-main **********-->
 
-	<section class="catalog-main">
-		<div class="catalog-main__title-wrap">
-			<h2 class="section-title catalog-main__title">Каталог</h2>
+	<!--*************** Section-oplata ***************-->
+
+	<section class="oplata">
+		<div class="oplata__title-wrap">
+			<h2 class="section-title oplata__title">Оплата и доставка</h2>
 		</div>
-		
-		<div class="catalog-main__wrapper">
-			<div class="wrapper">
 
-				<ul class="submenu">
-					<li class="active" target="pechati"><h5>Макеты печатей</h5></li>
-					<li target="shtampy" class=""><h5>Макеты штампов</h5></li>
-					<li target="datery" class=""><h5>Датеры и нумераторы</h5></li>
-					<li target="osnastka" class=""><h5>Оснастка</h5></li>
-					<li target="tovary" class=""><h5>Сопутствующие товары</h5></li>
-				</ul>
-
-		        <div class="catalog-main__content">
-
-		            <div class="klishe-row" id="pechati">
-		                <ul>
-		                  	<li class="klishe-row__list">		                  		
-		                    	<img src="img/catalog/catalog1.png" alt="alt">		          
-		                    	<img src="img/catalog/catalog6.png" alt="alt">
-								<img src="img/catalog/catalog1.png" alt="alt">
-								<img src="img/catalog/catalog6.png" alt="alt">
-								<img src="img/catalog/catalog1.png" alt="alt">
-								<img src="img/catalog/catalog6.png" alt="alt">
-								<img src="img/catalog/catalog1.png" alt="alt">
-								<img src="img/catalog/catalog6.png" alt="alt">
-								<img src="img/catalog/catalog1.png" alt="alt">
-								<img src="img/catalog/catalog6.png" alt="alt">	                   
-							</li>
-						</ul>
-					</div>
-							
-					<div class="klishe-row" id="shtampy">	
-						<ul>
-							<li class="klishe-row__list">
-		                    	<img src="img/catalog/catalog2.png" alt="alt">
-		                    	<img src="img/catalog/catalog2.png" alt="alt">
-		                    	<img src="img/catalog/catalog2.png" alt="alt">
-		                    	<img src="img/catalog/catalog2.png" alt="alt">
-		                    	<img src="img/catalog/catalog2.png" alt="alt">
-		                    	<img src="img/catalog/catalog2.png" alt="alt">							
-		                    	<img src="img/catalog/catalog2.png" alt="alt">							
-		                    	<img src="img/catalog/catalog2.png" alt="alt">							
-		                    	<img src="img/catalog/catalog2.png" alt="alt">							
-		                    	<img src="img/catalog/catalog2.png" alt="alt">							
-							</li>
-						</ul>
-					</div>
-
-					<div class="klishe-row" id="datery">	
-						<ul>
-							<li class="klishe-row__list">
-		                    	<img src="img/catalog/catalog3.png" alt="alt">
-		                    	<img src="img/catalog/catalog3.png" alt="alt">
-		                    	<img src="img/catalog/catalog3.png" alt="alt">
-		                    	<img src="img/catalog/catalog3.png" alt="alt">
-		                    	<img src="img/catalog/catalog3.png" alt="alt">
-		                    	<img src="img/catalog/catalog3.png" alt="alt">							
-		                    	<img src="img/catalog/catalog3.png" alt="alt">							
-		                    	<img src="img/catalog/catalog3.png" alt="alt">							
-		                    	<img src="img/catalog/catalog3.png" alt="alt">							
-		                    	<img src="img/catalog/catalog3.png" alt="alt">							
-							</li>
-						</ul>
-					</div>
-
-					<div class="klishe-row" id="osnastka">	
-						<ul>
-							<li class="klishe-row__list">
-		                    	<img src="img/catalog/catalog4.png" alt="alt">
-		                    	<img src="img/catalog/catalog4.png" alt="alt">
-		                    	<img src="img/catalog/catalog4.png" alt="alt">
-		                    	<img src="img/catalog/catalog4.png" alt="alt">
-		                    	<img src="img/catalog/catalog4.png" alt="alt">
-		                    	<img src="img/catalog/catalog4.png" alt="alt">							
-		                    	<img src="img/catalog/catalog4.png" alt="alt">							
-		                    	<img src="img/catalog/catalog4.png" alt="alt">							
-		                    	<img src="img/catalog/catalog4.png" alt="alt">							
-		                    	<img src="img/catalog/catalog4.png" alt="alt">							
-							</li>
-						</ul>
-					</div>
-
-					<div class="klishe-row" id="tovary">	
-						<ul>
-							<li class="klishe-row__list">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">
-		                    	<img src="img/catalog/catalog5.png" alt="alt">							
-							</li>
-						</ul>
-					</div>
-		                         
-		        </div>
+		<div class="oplata-wrapper">
+			
+			<div class="oplata-wrapper__item">
+				<img class="oplata-wrapper__img" src="img/oplata/erip.png" alt="erip">
+				<div class="oplata-wrapper__descr">
+					<h5 class="oplata-wrapper__title">С помощью Системы «Расчет» (ЕРИП):</h5>
+					<ul class="oplata-wrapper__list">
+						<li>электронными деньгами (iPay, Webmoney, Easypay, belqi);</li>
+						<li>платежной карточкой (интернет-банк, мобильный-банк, банкомат, инфокиоск, касса банка*);</li>
+						<li>наличными (cash-in, касса банка*).</li>
+					</ul>
+					<div class="oplata-wrapper__note">если Вы осуществляете платеж в кассе банка, пожалуйста, сообщите кассиру о необходимости проведения оплаты услуги «Штамп-Сервис ООО - pe4ati.by» через систему «Расчет» (ЕРИП)</div>
+				</div>
 			</div>
+
+			<div class="oplata-wrapper__item">
+				<img class="oplata-wrapper__img" src="img/oplata/erip-1.png" alt="erip">
+				<div class="oplata-wrapper__descr">
+					<h5 class="oplata-wrapper__title">Для проведения платежа необходимо:</h5>
+					<ol class="oplata-wrapper__o-list">
+						<li><span>Выбрать последовательно пункты:</span>
+							<ul class="oplata-wrapper__inner">
+								<li>Система «Расчет» (ЕРИП)</li>
+								<li>г.Минск</li>
+								<li>Прочие услуги</li>
+								<li>Штамп-Сервис ООО - pe4ati.by</li>
+							</ul>
+						</li>
+						<li><span>Ввести номер счёта и ФИО</span></li>
+						<li><span>Проверить корректность информации</span></li>
+						<li><span>Совершить платеж</span></li>
+					</ol>
+					<div class="oplata-wrapper__note">Нахождение услуги в дереве услуг системы «Расчет» (ЕРИП) в некоторых пунктах оплаты может отличаться от описанного выше. В связи с этим, в случае возникновения проблем с поиском услуги, предлагаем выполнить поиск по УНП: 192008118.</div>
+				</div>
+			</div>
+
+			<div class="oplata-wrapper__item">
+				<img class="oplata-wrapper__img" src="img/oplata/ipay.png" alt="ipay">
+				<div class="oplata-wrapper__descr">
+					<h5 class="oplata-wrapper__title">iPay - оплата с баланса мобильного телефона**</h5>
+					<div class="oplata-wrapper__text">Совершить платеж Вы можете из личного кабинета сайта iPay.by. Для входа в личный кабинет используйте свой номер телефона и сеансовый пароль, для получения которого достаточно отправить любое SMS-сообщение на номер 5533 (стоимость SMS определяется тарифным планом абонента). После успешного входа в личный кабинет Вы можете осуществлять платежи, выбирая услуги для оплаты. Кроме того, Вы можете узнать баланс Вашего счета мобильного телефона, просмотреть историю платежей, при необходимости распечатать чек.</div>
+				</div>
+			</div>
+
+			<p class="operatory">Ссылка на оплату услуги «Штамп-Сервис ООО - pe4ati.by» через систему iPay для абонентов:</p>
+			
+			<div class="operatory__wrap">
+				<a href="#"><img src="img/oplata/ipay-mtc.png" alt="ipay-mtc"></a>
+				<a href="#"><img src="img/oplata/ipay-life.png" alt="ipay-life"></a>
+			</div>
+			
+			<div class="oplata-wrapper__commission">Комиссия системы iPay составит для абонентов МТС 3%, Life 3,5%</div>
+			<div class="oplata-wrapper__note oplata-wrapper__note--btm">исключения составляют номера телефонов, подключенные на корпоративный тариф, тарифный план «Свободный life:)» и абоненты, использующие оплату услуг сотовой связи по факту. Для осуществления операций в Системе iPay доступна не вся сумма баланса лицевого счета: после списания итоговой суммы операции на вашем счете должно остаться не менее 10 копеек для абонентов МТС и не менее 50 копеек для абонентов life:)</div>
+
+			<h5 class="call-us">Если у Вас остались вопросы - звоните нам или приходите к нам!</h5>
 		</div>
 	</section>
 
 
 
-
-		<!--************* Section-contacts *************-->
+	<!--************* Section-contacts *************-->
 
 	<div class="section-contacts">
 
