final changes at home

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Штамп-сервис</title>
+	<title>Каталог</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
@@ -47,9 +47,9 @@
 					</a>
 					<ul class="menu__links">
 						<li class="menu__links-item"><a href="#">Каталог</a></li>
-						<li class="menu__links-item"><a href="#">Акции</a></li>
+						<li class="menu__links-item"><a href="#discount">Акции</a></li>
 						<li class="menu__links-item"><a href="#">Оплата и доставка</a></li>
-						<li class="menu__links-item contacts"><a href="#">Отзывы</a></li>
+						<li class="menu__links-item"><a href="#review">Отзывы</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -276,7 +276,7 @@
         </form>
     </div>
 	
-	<script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&lang=ru-RU" type="text/javascript"></script>
+	<script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&lang=ru-RU"></script>
 
 	<script>
   	ymaps.ready(init);
