--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 					</a>
 					<ul class="menu__links">
 						<li class="menu__links-item"><a href="#">Каталог</a></li>
-						<li class="menu__links-item"><a href="#">Акции</a></li>
+						<li class="menu__links-item"><a href="#discount">Акции</a></li>
 						<li class="menu__links-item"><a href="#">Оплата и доставка</a></li>
-						<li class="menu__links-item contacts"><a href="#review">Отзывы</a></li>
+						<li class="menu__links-item"><a href="#review">Отзывы</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -66,7 +66,7 @@
 
 	<!--**************** Main-slider ****************-->
 	
-	<div class="slider-wrap">
+	<div class="slider-wrap" id="discount">
 		<div class="flexslider">
 		    <ul class="slides">
 		        <li>
@@ -511,7 +511,7 @@
         </form>
     </div>
 	
-	<script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&lang=ru-RU" type="text/javascript"></script>
+	<script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&lang=ru-RU"></script>
 
 	<script>
   	ymaps.ready(init);
